# dvnr

./: dvnr.cpp  dvnr.h  dvnr_internal.h  run_inr_api.cpp
backends/cpp/: CMakeLists.txt  backend.cpp  backend.cu  backend.h
backends/libtorch/: CMakeLists.txt  backend.cpp  backend.h  networks.cpp  networks.hpp
backends/python/: CMakeLists.txt  backend.cpp  backend.cu  backend.h  bindings.cpp  compressor.py  networks.py  samplers.py  utils.py
